--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@heroicons/vue": "^1.0.6",
     "@supabase/supabase-js": "^1.34.1",
     "@tailwindcss/forms": "^0.5.0",
+    "lodash": "^4.17.21",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.25",
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.4",
