Fix GitHub Action dev workflow

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -2,9 +2,7 @@ name: Deploy
 
 on:
   push:
-    branches: [ deploy-client, dev ]
-  pull_request:
-    branches: [ deploy-client, dev ]
+    branches: [ dev ]
   workflow_dispatch:
 
 jobs:
