--- a/package.json
+++ b/package.json
@@ -8,23 +8,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.5.0",
+    "@headlessui/vue": "^1.6.1",
     "@heroicons/vue": "^1.0.6",
-    "@supabase/supabase-js": "^1.34.1",
-    "@tailwindcss/forms": "^0.5.0",
+    "@supabase/supabase-js": "^1.35.3",
+    "@tailwindcss/forms": "^0.5.2",
     "lodash": "^4.17.21",
+    "pinia": "^2.0.14",
+    "pinia-plugin-persistedstate": "^1.5.2",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.15"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.25",
-    "@vitejs/plugin-vue": "^2.2.0",
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
+    "@types/node": "^17.0.34",
+    "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.9",
     "vue-tsc": "^0.29.8"
   }
 }
