--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/vue": "^1.0.6",
     "@supabase/supabase-js": "^1.35.3",
     "@tailwindcss/forms": "^0.5.2",
+    "crypto-js": "^4.1.1",
     "lodash": "^4.17.21",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^1.5.2",
@@ -19,6 +20,7 @@
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.34",
     "@vitejs/plugin-vue": "^2.3.3",
